<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="thibautvincent.extraopdracht.Activities.AddDiscussionActivity"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">


    <TextView
        android:text="@string/add_discussion_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etQuestion"
        android:inputType="text"
        />

    <TextView
        android:text="@string/add_discussion_first_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etFirstAnswer"
        android:inputType="text"
        />
    <TextView
        android:text="@string/add_discussion_second_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etSecondAnswer"
        android:inputType="text"
        />

    <TextView
        android:text="@string/add_discussion_compensation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etCompensation"
        android:inputType="text"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_discussion_button_save"
        android:id="@+id/btnSaveDiscussion"
        />

</LinearLayout>
